iraf/unix/boot/xyacc/debug/y.output

state 0
	$accept : _prog $end 
	prog : _    (1)

	YYEOF  shift 2
	.  reduce 1

	prog  goto 1

state 1
	$accept :  prog_$end 
	prog :  prog_stmt eost 
	prog :  prog_error \n 

	$end  accept
	error  shift 4
	CONST  shift 9
	LETTER  shift 6
	-  shift 8
	(  shift 7
	.  error

	stmt  goto 3
	expr  goto 5

state 2
	prog :  YYEOF_    (3)

	.  reduce 3


state 3
	prog :  prog stmt_eost 

	\n  shift 12
	;  shift 11
	.  error

	eost  goto 10

state 4
	prog :  prog error_\n 

	\n  shift 13
	.  error


state 5
	stmt :  expr_    (5)
	expr :  expr_+ opnl expr 
	expr :  expr_- opnl expr 
	expr :  expr_* opnl expr 
	expr :  expr_/ opnl expr 

	+  shift 14
	-  shift 15
	*  shift 16
	/  shift 17
	.  reduce 5


state 6
	stmt :  LETTER_= expr 
	expr :  LETTER_    (13)

	=  shift 18
	.  reduce 13


state 7
	expr :  (_expr ) 

	CONST  shift 9
	LETTER  shift 20
	-  shift 8
	(  shift 7
	.  error

	expr  goto 19

state 8
	expr :  -_expr 

	CONST  shift 9
	LETTER  shift 20
	-  shift 8
	(  shift 7
	.  error

	expr  goto 21

state 9
	expr :  CONST_    (14)

	.  reduce 14


state 10
	prog :  prog stmt eost_    (2)

	.  reduce 2


state 11
	eost :  ;_    (15)

	.  reduce 15


state 12
	eost :  \n_    (16)

	.  reduce 16


state 13
	prog :  prog error \n_    (4)

	.  reduce 4


state 14
	expr :  expr +_opnl expr 
	opnl : _    (17)

	.  reduce 17

	opnl  goto 22

state 15
	expr :  expr -_opnl expr 
	opnl : _    (17)

	.  reduce 17

	opnl  goto 23

state 16
	expr :  expr *_opnl expr 
	opnl : _    (17)

	.  reduce 17

	opnl  goto 24

state 17
	expr :  expr /_opnl expr 
	opnl : _    (17)

	.  reduce 17

	opnl  goto 25

state 18
	stmt :  LETTER =_expr 

	CONST  shift 9
	LETTER  shift 20
	-  shift 8
	(  shift 7
	.  error

	expr  goto 26

state 19
	expr :  ( expr_) 
	expr :  expr_+ opnl expr 
	expr :  expr_- opnl expr 
	expr :  expr_* opnl expr 
	expr :  expr_/ opnl expr 

	+  shift 14
	-  shift 15
	*  shift 16
	/  shift 17
	)  shift 27
	.  error


state 20
	expr :  LETTER_    (13)

	.  reduce 13


state 21
	expr :  expr_+ opnl expr 
	expr :  expr_- opnl expr 
	expr :  expr_* opnl expr 
	expr :  expr_/ opnl expr 
	expr :  - expr_    (12)

	.  reduce 12


state 22
	expr :  expr + opnl_expr 
	opnl :  opnl_\n 

	CONST  shift 9
	LETTER  shift 20
	-  shift 8
	\n  shift 29
	(  shift 7
	.  error

	expr  goto 28

state 23
	expr :  expr - opnl_expr 
	opnl :  opnl_\n 

	CONST  shift 9
	LETTER  shift 20
	-  shift 8
	\n  shift 29
	(  shift 7
	.  error

	expr  goto 30

state 24
	expr :  expr * opnl_expr 
	opnl :  opnl_\n 

	CONST  shift 9
	LETTER  shift 20
	-  shift 8
	\n  shift 29
	(  shift 7
	.  error

	expr  goto 31

state 25
	expr :  expr / opnl_expr 
	opnl :  opnl_\n 

	CONST  shift 9
	LETTER  shift 20
	-  shift 8
	\n  shift 29
	(  shift 7
	.  error

	expr  goto 32

state 26
	stmt :  LETTER = expr_    (6)
	expr :  expr_+ opnl expr 
	expr :  expr_- opnl expr 
	expr :  expr_* opnl expr 
	expr :  expr_/ opnl expr 

	+  shift 14
	-  shift 15
	*  shift 16
	/  shift 17
	.  reduce 6


state 27
	expr :  ( expr )_    (7)

	.  reduce 7


state 28
	expr :  expr_+ opnl expr 
	expr :  expr + opnl expr_    (8)
	expr :  expr_- opnl expr 
	expr :  expr_* opnl expr 
	expr :  expr_/ opnl expr 

	*  shift 16
	/  shift 17
	.  reduce 8


state 29
	opnl :  opnl \n_    (18)

	.  reduce 18


state 30
	expr :  expr_+ opnl expr 
	expr :  expr_- opnl expr 
	expr :  expr - opnl expr_    (9)
	expr :  expr_* opnl expr 
	expr :  expr_/ opnl expr 

	*  shift 16
	/  shift 17
	.  reduce 9


state 31
	expr :  expr_+ opnl expr 
	expr :  expr_- opnl expr 
	expr :  expr_* opnl expr 
	expr :  expr * opnl expr_    (10)
	expr :  expr_/ opnl expr 

	.  reduce 10


state 32
	expr :  expr_+ opnl expr 
	expr :  expr_- opnl expr 
	expr :  expr_* opnl expr 
	expr :  expr_/ opnl expr 
	expr :  expr / opnl expr_    (11)

	.  reduce 11


15/127 terminals, 5/300 nonterminals
19/600 grammar rules, 33/750 states
0 shift/reduce, 0 reduce/reduce conflicts reported
13/350 working sets used
memory: states,etc. 226/12000, parser 14/12000
11/600 distinct lookahead sets
5 extra closures
59 shift entries, 1 exceptions
15 goto entries
0 entries saved by goto default
Optimizer space used: input 145/12000, output 249/12000
249 table entries, 204 zero
maximum spread: 259, maximum offset: 259
